CRITICAL BUG: Quote data columns 36-41 not writing to Google Sheet
PROBLEM SUMMARY:
- Quote data columns (Policy Date, Quote Coverage, Quote Premium, Quote Age, Quote Gender, Quote Type) are consistently empty in Google Sheet
- All other columns (1-35) work perfectly
- Even with hardcoded values, direct array indices, and different writing methods, columns 36-41 remain empty
- Issue persists across multiple test approaches:
  * transformDataToTestFormat function mapping
  * buildUnifiedRowData array assignment
  * Direct array indexing (rowData[35] through rowData[40])
  * Different writing methods (appendRow vs getRange)
  * Hardcoded test values

ROOT CAUSE HYPOTHESIS:
- Google Sheet may not actually have 51 columns
- Column constants may be incorrect for 36-41
- Array indexing issue beyond column 35
- Sheet structure or permission issue

CURRENT STATE:
- FunnelStore.ts quote data transformation fixed
- Google Apps Script debugging added
- Test with every column (COL_1 through COL_51) to identify exact cutoff
- Need to determine if sheet supports 51 columns or fewer

NEXT STEPS:
- Check Google Sheet for EVERY_COLUMN_TEST results
- Identify last column that shows data
- Adjust column mapping based on actual sheet capacity
- Fix quote data mapping once column limit is known

--- a/funnel-app/package.json
+++ b/funnel-app/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:emails": "node scripts/buildEmailTemplates.js",
+    "build:all": "npm run build && npm run build:emails",
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
