Build React app with debugging logs and fix build issues

--- a/funnel-app/package.json
+++ b/funnel-app/package.json
@@ -6,7 +6,7 @@
   "main": "dist/veteran-funnel.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "build:emails": "node scripts/buildEmailTemplates.js",
     "build:all": "npm run build && npm run build:emails",
     "preview": "vite preview",
