--- a/funnel-app/package.json
+++ b/funnel-app/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/veteran-funnel.js",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
     "build:emails": "node scripts/buildEmailTemplates.js",
     "build:all": "npm run build && npm run build:emails",
